poeple and CROP

--- a/people.html
+++ b/people.html
@@ -409,8 +409,8 @@ $(document).ready(function () {
 University of Cologne <a href="about.html">read more</a></p>
 <!-- break -->
 <p><br> <br> <br> <!-- break --></p>
-<div id="postdoc" class="section level2">
-<h2>Postdoc</h2>
+<div id="postdocs" class="section level2">
+<h2>Postdocs</h2>
 <div style="float: left">
 <p><img src="own_images/people/akanksha.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
@@ -488,6 +488,18 @@ syndromes as part of the TRR 341</p>
 <!-- break -->
 <p><br> <br> <br> <br> <br> <br> <br></p>
 </div>
+<div id="office" class="section level2">
+<h2>Office</h2>
+<div style="float: left">
+<p><img src="own_images/people/Katharina_Borowski.jpg" style="width: 100px ;border:10px solid white"></p>
+</div>
+<strong>Katharina Borowski</strong>
+<div style="float: left">
+
+</div>
+<p>Roswitha runs the office and does the paper work magic <!-- break -->
+<br> <br> <br> <br> <br> <br> <br></p>
+</div>
 <div id="lab-manager" class="section level2">
 <h2>Lab manager</h2>
 <div style="float: left">
@@ -505,35 +517,68 @@ syndromes as part of the TRR 341</p>
 </div>
 -->
 </div>
+<div id="bsc-thesis" class="section level2">
+<h2>BSc Thesis</h2>
+<div style="float: left">
+<p><img src="own_images/people/Maria_Rodriguez.JPG" style="width: 100px ;border:10px solid white"></p>
+</div>
+<strong>Maria Rodriguez</strong>
+<div style="float: left">
+
+</div>
+<p>Maria studies of betalain accumulation and its fitness consequences
+under stress in amaranth. <!-- break --> <br> <br> <br> <br> <br> <br>
+<br></p>
+<div style="float: left">
+<p><img src="own_images/people/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
+</div>
+<strong>Carlotta Sehl</strong>
+<div style="float: left">
+
+</div>
+<p>Maria studies of betalain accumulation and its fitness consequences
+under stress in amaranth. <!-- break --> <br> <br> <br> <br> <br> <br>
+<br></p>
+</div>
 <div id="student-helpers-and-interns" class="section level2">
 <h2>Student helpers and interns</h2>
 <div style="float: left">
-<p><img src="own_images/people/Vivien_Pluekthun.jpg" style="width: 100px ;border:10px solid white"></p>
+<p><img src="own_images/people/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
-<strong>Vivien Pluekthun</strong>
+<strong>Fernanda Daniela Giampaoli</strong>
 <div style="float: left">
 
 </div>
-<p>Vivien studies genetic determinants of germination in grain amaranth.
-<!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<p>Fernanda helps with wet lab duties. <!-- break --> <br> <br> <br>
+<br> <br> <br> <br></p>
 <div style="float: left">
-<p><img src="own_images/people/Emily_Rywelski.JPG" style="width: 100px ;border:10px solid white"></p>
+<p><img src="own_images/people/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
-<strong>Emily Rywelski</strong>
-<div style="float: left">
-
-</div>
-<p>Emily works on pollen nucleous extraction and cell sorting.
-<!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
-<div style="float: left">
-<p><img src="own_images/people/Jan_Krause.jpg" style="width: 100px ;border:10px solid white"></p>
-</div>
-<strong>Jan Krause</strong>
+<strong>Laura Brüggemann</strong>
 <div style="float: left">
 
 </div>
-<p>Jan studies the diversity of Cetral American grain amaranth.
+<p>Laura helps with the plant work and seed handling <!-- break --> <br>
+<br> <br> <br> <br> <br> <br></p>
+<div style="float: left">
+<p><img src="own_images/people/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
+</div>
+<strong>Aslinur Aktürk</strong>
+<div style="float: left">
+
+</div>
+<p>Aslinur updates AmaranthGDB to the most recent reference genome.
 <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<div style="float: left">
+<p><img src="own_images/people/Luca_Weber.jpg" style="width: 100px ;border:10px solid white"></p>
+</div>
+<strong>Luca Weber</strong>
+<div style="float: left">
+
+</div>
+<p>Luca studies the impact of a transposable element on domestication
+traits in amaranth. <!-- break --> <br> <br> <br> <br> <br> <br>
+<br></p>
 <!-- break 
 
 <div style="float: left">
