--- a/reading.html
+++ b/reading.html
@@ -409,6 +409,13 @@ paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="march" class="section level3">
 <h3>March</h3>
+<div id="tuesday-march-12" class="section level4">
+<h4>Tuesday March 12</h4>
+<p><a
+href="https://genomebiology.biomedcentral.com/articles/10.1186/s13059-024-03203-z">He
+et al, 2024</a> Genomic insight into the origin, domestication,
+dispersal, diversification and human selection of Tartary buckwheat</p>
+</div>
 <div id="tuesday-march-5" class="section level4">
 <h4>Tuesday March 5</h4>
 <p><a
