--- a/people.html
+++ b/people.html
@@ -530,7 +530,7 @@ syndromes as part of the TRR 341</p>
 under stress in amaranth. <!-- break --> <br> <br> <br> <br> <br> <br>
 <br></p>
 <div style="float: left">
-<p><img src="own_images/people/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
+<p><img src="own_images/people/Carlotta_Sehl.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
 <strong>Carlotta Sehl</strong>
 <div style="float: left">
@@ -543,14 +543,14 @@ under stress in amaranth. <!-- break --> <br> <br> <br> <br> <br> <br>
 <div id="student-helpers-and-interns" class="section level2">
 <h2>Student helpers and interns</h2>
 <div style="float: left">
-<p><img src="own_images/people/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
+<p><img src="own_images/people/Aslinur_Aktu%CC%88rk.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
-<strong>Fernanda Daniela Giampaoli</strong>
+<strong>Aslinur Aktürk</strong>
 <div style="float: left">
 
 </div>
-<p>Fernanda helps with wet lab duties. <!-- break --> <br> <br> <br>
-<br> <br> <br> <br></p>
+<p>Aslinur updates AmaranthGDB to the most recent reference genome.
+<!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 <div style="float: left">
 <p><img src="own_images/people/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
@@ -563,12 +563,12 @@ under stress in amaranth. <!-- break --> <br> <br> <br> <br> <br> <br>
 <div style="float: left">
 <p><img src="own_images/people/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
-<strong>Aslinur Aktürk</strong>
+<strong>Fernanda Daniela Giampaoli</strong>
 <div style="float: left">
 
 </div>
-<p>Aslinur updates AmaranthGDB to the most recent reference genome.
-<!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<p>Fernanda helps with wet lab duties. <!-- break --> <br> <br> <br>
+<br> <br> <br> <br></p>
 <div style="float: left">
 <p><img src="own_images/people/Luca_Weber.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
