--- a/people.html
+++ b/people.html
@@ -543,7 +543,7 @@ under stress in amaranth. <!-- break --> <br> <br> <br> <br> <br> <br>
 <div id="student-helpers-and-interns" class="section level2">
 <h2>Student helpers and interns</h2>
 <div style="float: left">
-<p><img src="own_images/people/Aslinur_Aktu%CC%88rk.jpg" style="width: 100px ;border:10px solid white"></p>
+<p><img src="own_images/people/Aslinur_Aktuerk.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
 <strong>Aslinur Aktürk</strong>
 <div style="float: left">
