--- a/people.html
+++ b/people.html
@@ -526,8 +526,8 @@ syndromes as part of the TRR 341</p>
 <div style="float: left">
 
 </div>
-<p>Maria studies of betalain accumulation and its fitness consequences
-under stress in amaranth. <!-- break --> <br> <br> <br> <br> <br> <br>
+<p>Maria studie betalain accumulation and its fitness consequences under
+stress in amaranth. <!-- break --> <br> <br> <br> <br> <br> <br>
 <br></p>
 <div style="float: left">
 <p><img src="own_images/people/Carlotta_Sehl.jpg" style="width: 100px ;border:10px solid white"></p>
@@ -536,9 +536,9 @@ under stress in amaranth. <!-- break --> <br> <br> <br> <br> <br> <br>
 <div style="float: left">
 
 </div>
-<p>Maria studies of betalain accumulation and its fitness consequences
-under stress in amaranth. <!-- break --> <br> <br> <br> <br> <br> <br>
-<br></p>
+<p>Carlotta develops grafting as tool for genome editing in amaranth</p>
+<!-- break -->
+<p><br> <br> <br> <br> <br> <br> <br></p>
 </div>
 <div id="student-helpers-and-interns" class="section level2">
 <h2>Student helpers and interns</h2>
