--- a/people.html
+++ b/people.html
@@ -497,8 +497,8 @@ syndromes as part of the TRR 341</p>
 <div style="float: left">
 
 </div>
-<p>Roswitha runs the office and does the paper work magic <!-- break -->
-<br> <br> <br> <br> <br> <br> <br></p>
+<p>Katharina runs the office and does the paper work magic
+<!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 </div>
 <div id="lab-manager" class="section level2">
 <h2>Lab manager</h2>
