--- a/reading.html
+++ b/reading.html
@@ -407,8 +407,26 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="april" class="section level3">
+<h3>April</h3>
+<div id="tuesday-april-2" class="section level4">
+<h4>Tuesday April 2</h4>
+<p>Easter break</p>
+</div>
+</div>
 <div id="march" class="section level3">
 <h3>March</h3>
+<div id="tuesday-march-26" class="section level4">
+<h4>Tuesday March 26</h4>
+<p>Easter break</p>
+</div>
+<div id="tuesday-march-19" class="section level4">
+<h4>Tuesday March 19</h4>
+<p><a href="https://www.nature.com/articles/s41588-024-01655-4">He et
+al, 2024</a> Large-scale gene expression alterations introduced by
+structural variation drive morphotype diversification in Brassica
+oleracea</p>
+</div>
 <div id="tuesday-march-12" class="section level4">
 <h4>Tuesday March 12</h4>
 <p><a
@@ -620,7 +638,7 @@ et al., preprint</a> Simple scaling laws control the genetic
 architectures of human complex traits</p>
 </div>
 </div>
-<div id="april" class="section level3">
+<div id="april-1" class="section level3">
 <h3>April</h3>
 <div id="thursday-april-27" class="section level4">
 <h4>Thursday April 27</h4>
@@ -841,7 +859,7 @@ al 2022</a> Parallel reduction in flowering time from de novo mutations
 enable evolutionary rescue in colonizing lineages</p>
 </div>
 </div>
-<div id="april-1" class="section level3">
+<div id="april-2" class="section level3">
 <h3>April</h3>
 <div id="thursday-april-28" class="section level4">
 <h4>Thursday April 28</h4>
@@ -1081,7 +1099,7 @@ et al 2021</a> Deleterious mutation accumulation and the long-term fate
 of chromosomal inversions</p>
 </div>
 </div>
-<div id="april-2" class="section level3">
+<div id="april-3" class="section level3">
 <h3>April</h3>
 <div id="thursday-april-29" class="section level4">
 <h4>Thursday April 29</h4>
@@ -1624,7 +1642,7 @@ landscape during a radiation of monkeyflowers</p>
 <h3>May</h3>
 <p>We took a little break to set up the lab and find a place</p>
 </div>
-<div id="april-3" class="section level3">
+<div id="april-4" class="section level3">
 <h3>April</h3>
 <div id="thursday-april-18" class="section level4">
 <h4>Thursday April 18</h4>
