CROP and people

--- a/people.html
+++ b/people.html
@@ -444,16 +444,6 @@ of European maize. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 amaranth and how it changed during the repeated domestication.
 <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 <div style="float: left">
-<p><img src="own_images/people/kerstin.jpg" style="width: 100px ;border:10px solid white"></p>
-</div>
-<strong>Kerstin Schulz</strong>
-<div style="float: left">
-
-</div>
-<p>Kerstin is a PhD student and part of the CEPLAS graduate school.
-Kerstin employs ancestral recombination graphs to study the evolution of
-maize <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
-<div style="float: left">
 <p><img src="own_images/people/SusanneVollmer.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
 <strong>Susanne Vollmer</strong>
@@ -519,6 +509,16 @@ syndromes as part of the TRR 341</p>
 </div>
 <div id="bsc-thesis" class="section level2">
 <h2>BSc Thesis</h2>
+<div style="float: left">
+<p><img src="own_images/people/Bartlomiej_Chachula.jpg" style="width: 100px ;border:10px solid white"></p>
+</div>
+<strong>Bartlomiej Chachula</strong>
+<div style="float: left">
+
+</div>
+<p>Bartlomiej seed color change during amaranth domestication using AI
+driven seed phenotyping. <!-- break --> <br> <br> <br> <br> <br> <br>
+<br></p>
 <div style="float: left">
 <p><img src="own_images/people/Maria_Rodriguez.JPG" style="width: 100px ;border:10px solid white"></p>
 </div>
