--- a/reading.html
+++ b/reading.html
@@ -409,6 +409,27 @@ paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="april" class="section level3">
 <h3>April</h3>
+<div id="tuesday-april-30" class="section level4">
+<h4>Tuesday April 30</h4>
+<p>No CROP</p>
+</div>
+<div id="tuesday-april-23" class="section level4">
+<h4>Tuesday April 23</h4>
+<p><a href="https://www.pnas.org/doi/10.1073/pnas.2316008121">Sianta et
+al, 2024</a> The extent of introgression between incipient Clarkia
+species is determined by temporal environmental variation and mating
+system</p>
+</div>
+<div id="tuesday-april-16" class="section level4">
+<h4>Tuesday April 16</h4>
+<p>TRR 341 seminar</p>
+</div>
+<div id="tuesday-april-9" class="section level4">
+<h4>Tuesday April 9</h4>
+<p><a
+href="https://www.biorxiv.org/content/10.1101/2024.04.02.587814v1">Nocchi
+et al, preprint</a> Repeated global adaptation across plant species</p>
+</div>
 <div id="tuesday-april-2" class="section level4">
 <h4>Tuesday April 2</h4>
 <p>Easter break</p>
