CROP + Pub + People

--- a/people.html
+++ b/people.html
@@ -13,7 +13,7 @@
 
 <title>Current lab members</title>
 
-<script src="site_libs/header-attrs-2.22/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.26/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
@@ -32,8 +32,8 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/textmate.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/font-awesome-6.4.0/css/all.min.css" rel="stylesheet" />
-<link href="site_libs/font-awesome-6.4.0/css/v4-shims.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-6.4.2/css/all.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-6.4.2/css/v4-shims.min.css" rel="stylesheet" />
 <link href="site_libs/ionicons-2.0.1/css/ionicons.min.css" rel="stylesheet" />
 <!-- Slideshow container -->
 <div class="slideshow-container" ></div>
@@ -554,15 +554,6 @@ stress in amaranth. <!-- break --> <br> <br> <br> <br> <br> <br>
 <div style="float: left">
 <p><img src="own_images/people/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
-<strong>Laura Brüggemann</strong>
-<div style="float: left">
-
-</div>
-<p>Laura helps with the plant work and seed handling <!-- break --> <br>
-<br> <br> <br> <br> <br> <br></p>
-<div style="float: left">
-<p><img src="own_images/people/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
-</div>
 <strong>Fernanda Daniela Giampaoli</strong>
 <div style="float: left">
 
@@ -572,13 +563,12 @@ stress in amaranth. <!-- break --> <br> <br> <br> <br> <br> <br>
 <div style="float: left">
 <p><img src="own_images/people/Luca_Weber.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
-<strong>Luca Weber</strong>
+<strong>Ella Ludwig</strong>
 <div style="float: left">
 
 </div>
-<p>Luca studies the impact of a transposable element on domestication
-traits in amaranth. <!-- break --> <br> <br> <br> <br> <br> <br>
-<br></p>
+<p>Ella studies stuctural variation in amaranth. <!-- break --> <br>
+<br> <br> <br> <br> <br> <br></p>
 <!-- break 
 
 <div style="float: left">
@@ -638,6 +628,7 @@ href="mailto:mgstetter@gmail.com">contact us</a></p>
 <li>Tom Winkler (BSc, MSc student)</li>
 <li>José Goncalves-Dias (PhD student)</li>
 <li>Julio Martinez (MSc student)</li>
+<li>Kerstin Schulz</li>
 </ul>
 </div>
 <div id="past-visitors" class="section level2">
@@ -654,6 +645,7 @@ href="mailto:mgstetter@gmail.com">contact us</a></p>
 <li>Anny Garces</li>
 <li>Nguyen Quang Huy</li>
 <li>Roger Antonio Sulub Tun</li>
+<li>Luca Weber</li>
 </ul>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-YQ1CKNGTV5"></script>
