--- a/publications.html
+++ b/publications.html
@@ -13,7 +13,7 @@
 
 <title>publications.knit</title>
 
-<script src="site_libs/header-attrs-2.22/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.26/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
@@ -32,8 +32,8 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/textmate.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/font-awesome-6.4.0/css/all.min.css" rel="stylesheet" />
-<link href="site_libs/font-awesome-6.4.0/css/v4-shims.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-6.4.2/css/all.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-6.4.2/css/v4-shims.min.css" rel="stylesheet" />
 <link href="site_libs/ionicons-2.0.1/css/ionicons.min.css" rel="stylesheet" />
 <!-- Slideshow container -->
 <div class="slideshow-container" ></div>
@@ -400,20 +400,23 @@ $(document).ready(function () {
 <p>   </p>
 <div id="preprint" class="section level2">
 <h2>Preprint</h2>
-<ul>
-<li><a href="https://doi.org/10.1101/2023.08.24.554588">Isoform-resolved
-genome annotation enables mapping of tissue-specific betalain regulation
-and anthocyanin regulator co-option in amaranth</a> <strong>Winkler TS,
-Vollmer SK and Stetter MG</strong></li>
-</ul>
+<p>Coming soon</p>
 </div>
 <div id="section" class="section level2">
 <h2>2024</h2>
-<p><a href="https://doi.org/10.1002/ppp3.10492">Eight arguments why
+<ul>
+<li><p><a href="https://doi.org/10.1111/nph.19736">Isoform-resolved
+genome annotation enables mapping of tissue-specific betalain regulation
+and anthocyanin regulator co-option in amaranth</a> <strong>Winkler TS,
+Vollmer SK</strong>,Dyballa-Rukes N, Metzger S and <strong>Stetter
+MG</strong> <a
+href="https://doi.org/10.1101/2023.08.24.554588">Preprint</a></p></li>
+<li><p><a href="https://doi.org/10.1002/ppp3.10492">Eight arguments why
 biodiversity is important to safeguard food security</a> Dannenberg P,
 Braun B, Greiner C, Follmann A, Haug M, Semedi Hargo Yuwono P,
 <strong>Stetter M</strong>, Widlok T and Kopriva S. <em>Plants, People,
-Planet</em></p>
+Planet</em></p></li>
+</ul>
 </div>
 <div id="section-1" class="section level2">
 <h2>2023</h2>
