--- a/reading.html
+++ b/reading.html
@@ -13,7 +13,7 @@
 
 <title>What we read</title>
 
-<script src="site_libs/header-attrs-2.22/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.26/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
@@ -32,8 +32,8 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/textmate.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/font-awesome-6.4.0/css/all.min.css" rel="stylesheet" />
-<link href="site_libs/font-awesome-6.4.0/css/v4-shims.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-6.4.2/css/all.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-6.4.2/css/v4-shims.min.css" rel="stylesheet" />
 <link href="site_libs/ionicons-2.0.1/css/ionicons.min.css" rel="stylesheet" />
 <!-- Slideshow container -->
 <div class="slideshow-container" ></div>
@@ -407,6 +407,37 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="may" class="section level3">
+<h3>May</h3>
+<div id="tuesday-may-28" class="section level4">
+<h4>Tuesday May 28</h4>
+<p><a
+href="https://www.biorxiv.org/content/10.1101/2023.04.19.537550v1.full">Garner
+et al, preprint</a> A cis-regulatory point mutation at a R2R3-Myb
+transcription factor contributes to speciation by reinforcement in Phlox
+drummondii</p>
+</div>
+<div id="tuesday-may-21" class="section level4">
+<h4>Tuesday May 21</h4>
+<p><a
+href="https://www.biorxiv.org/content/10.1101/2024.02.10.579721v2.full">Schraiber
+et al, preprint</a> Unifying approaches from statistical genetics and
+phylogenetics for mapping phenotypes in structured populations</p>
+</div>
+<div id="tuesday-may-14" class="section level4">
+<h4>Tuesday May 14</h4>
+<p><a
+href="https://nph.onlinelibrary.wiley.com/doi/abs/10.1111/nph.19738">Sun
+et al, 2024</a> A WOX homolog disrupted by a transposon led to the loss
+of spines and contributed to the domestication of lettuce</p>
+</div>
+<div id="tuesday-may-7" class="section level4">
+<h4>Tuesday May 7</h4>
+<p><a href="https://www.nature.com/articles/s41588-024-01715-9">Lian et
+al, 2024</a> A pan-genome of 69 Arabidopsis thaliana accessions reveals
+a conserved genome structure throughout the global species range</p>
+</div>
+</div>
 <div id="april" class="section level3">
 <h3>April</h3>
 <div id="tuesday-april-30" class="section level4">
@@ -643,7 +674,7 @@ al., 2023</a> A pan-genome of 72 Arabidopsis thaliana accessions reveals
 a conserved genome structure throughout the global species range</p>
 </div>
 </div>
-<div id="may" class="section level3">
+<div id="may-1" class="section level3">
 <h3>May</h3>
 <div id="thursday-may-25" class="section level4">
 <h4>Thursday May 25</h4>
@@ -866,7 +897,7 @@ et al preprint</a> Low heritability of crossover rate in wild
 sticklebacks</p>
 </div>
 </div>
-<div id="may-1" class="section level3">
+<div id="may-2" class="section level3">
 <h3>May</h3>
 <div id="thursday-may-12" class="section level4">
 <h4>Thursday May 12</h4>
@@ -1096,7 +1127,7 @@ et al, preprint</a> Polygenic routes lead to parallel altitudinal
 adaptation in Heliosperma pusillum (Caryophyllaceae)</p>
 </div>
 </div>
-<div id="may-2" class="section level3">
+<div id="may-3" class="section level3">
 <h3>May</h3>
 <div id="thursday-may-27" class="section level4">
 <h4>Thursday May 27</h4>
@@ -1377,7 +1408,7 @@ and Weigel 2020</a> Identifying genetic variants underlying phenotypic
 variation in plants without complete genomes</p>
 </div>
 </div>
-<div id="may-3" class="section level3">
+<div id="may-4" class="section level3">
 <h3>May</h3>
 <div id="thursday-may-28" class="section level4">
 <h4>Thursday May 28</h4>
@@ -1659,7 +1690,7 @@ et al preprint</a> Widespread selection and gene flow shape the genomic
 landscape during a radiation of monkeyflowers</p>
 </div>
 </div>
-<div id="may-4" class="section level3">
+<div id="may-5" class="section level3">
 <h3>May</h3>
 <p>We took a little break to set up the lab and find a place</p>
 </div>
