--- a/publications.html
+++ b/publications.html
@@ -407,15 +407,16 @@ $(document).ready(function () {
 <ul>
 <li><p><a href="https://doi.org/10.1111/nph.19736">Isoform-resolved
 genome annotation enables mapping of tissue-specific betalain regulation
-and anthocyanin regulator co-option in amaranth</a> <strong>Winkler TS,
-Vollmer SK</strong>,Dyballa-Rukes N, Metzger S and <strong>Stetter
-MG</strong> <a
+and anthocyanin regulator co-option in amaranth</a><br />
+<strong>Winkler TS, Vollmer SK</strong>,Dyballa-Rukes N, Metzger S and
+<strong>Stetter MG</strong> <em>New Phytologist</em><br />
+<a
 href="https://doi.org/10.1101/2023.08.24.554588">Preprint</a></p></li>
 <li><p><a href="https://doi.org/10.1002/ppp3.10492">Eight arguments why
-biodiversity is important to safeguard food security</a> Dannenberg P,
-Braun B, Greiner C, Follmann A, Haug M, Semedi Hargo Yuwono P,
-<strong>Stetter M</strong>, Widlok T and Kopriva S. <em>Plants, People,
-Planet</em></p></li>
+biodiversity is important to safeguard food security</a><br />
+Dannenberg P, Braun B, Greiner C, Follmann A, Haug M, Semedi Hargo
+Yuwono P, <strong>Stetter M</strong>, Widlok T and Kopriva S.
+<em>Plants, People, Planet</em></p></li>
 </ul>
 </div>
 <div id="section-1" class="section level2">
@@ -424,9 +425,10 @@ Planet</em></p></li>
 <li><a
 href="https://academic.oup.com/mbe/advance-article/doi/10.1093/molbev/msad177/7239273?utm_source=authortollfreelink&amp;utm_campaign=mbe&amp;utm_medium=email&amp;guestAccessKey=172dbed5-2be8-44b6-9a54-2e1c537889d1">Genetic
 incompatibilities and evolutionary rescue by wild relatives shaped grain
-amaranth domestication</a> <strong>Gonçalves-Dias J, Singh A, Graf C and
-Stetter MG</strong> <em>Molecular Biology and Evolution</em> <a
-href="https://doi.org/10.1101/2023.03.17.533106">Preprint</a></li>
+amaranth domestication</a><br />
+<strong>Gonçalves-Dias J*, Singh A*, Graf C and Stetter MG</strong>
+<em>Molecular Biology and Evolution</em><br />
+<a href="https://doi.org/10.1101/2023.03.17.533106">Preprint</a></li>
 </ul>
 </div>
 <div id="section-2" class="section level2">
