--- a/reading.html
+++ b/reading.html
@@ -407,6 +407,32 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="july" class="section level3">
+<h3>July</h3>
+<div id="tuesday-july-2" class="section level4">
+<h4>Tuesday July 2</h4>
+<p><a
+href="https://academic.oup.com/mbe/article/39/11/msac242/6806091">Ament-Velásquez
+et al, 2022</a> The Dynamics of Adaptation to Stress from Standing
+Genetic Variation and de novo Mutations</p>
+</div>
+</div>
+<div id="june" class="section level3">
+<h3>June</h3>
+<div id="tuesday-june-25" class="section level4">
+<h4>Tuesday June 25</h4>
+<p><a href="https://www.science.org/doi/10.1126/science.ade4487">Zhang
+et al, 2024</a> Rice’s trajectory from wild to domesticated in East
+Asia</p>
+</div>
+<div id="tuesday-june-18" class="section level4">
+<h4>Tuesday June 18</h4>
+<p><a
+href="https://www.biorxiv.org/content/10.1101/2023.10.27.564394v3">Smith
+and Hahn, preprint</a> Selection leads to false inferences of
+introgression using popular methods</p>
+</div>
+</div>
 <div id="may" class="section level3">
 <h3>May</h3>
 <div id="tuesday-may-28" class="section level4">
@@ -629,7 +655,7 @@ Divergent sorting of a balanced ancestral polymorphism underlies the
 establishment of gene-flow barriers in Capsella</p>
 </div>
 </div>
-<div id="july" class="section level3">
+<div id="july-1" class="section level3">
 <h3>July</h3>
 <div id="thursday-july-20" class="section level4">
 <h4>Thursday July 20</h4>
@@ -652,7 +678,7 @@ et al., 2023</a> Crop domestication as a step toward reproductive
 isolation</p>
 </div>
 </div>
-<div id="june" class="section level3">
+<div id="june-1" class="section level3">
 <h3>June</h3>
 <div id="thursday-june-22" class="section level4">
 <h4>Thursday June 22</h4>
@@ -865,7 +891,7 @@ al 2022</a> The megabase-scale crossover landscape is largely
 independent of sequence divergence</p>
 </div>
 </div>
-<div id="july-1" class="section level3">
+<div id="july-2" class="section level3">
 <h3>July</h3>
 <div id="thursday-july-28" class="section level4">
 <h4>Thursday July 28</h4>
@@ -875,7 +901,7 @@ et al preprint</a> Allele-specific expression reveals multiple paths to
 highland adaptation in maize</p>
 </div>
 </div>
-<div id="june-1" class="section level3">
+<div id="june-2" class="section level3">
 <h3>June</h3>
 <div id="thursday-june-23" class="section level4">
 <h4>Thursday June 23</h4>
@@ -1110,7 +1136,7 @@ and Osborne, 2021</a> Crop origins explain variation in global
 agricultural relevance</p>
 </div>
 </div>
-<div id="july-2" class="section level3">
+<div id="july-3" class="section level3">
 <h3>July</h3>
 <div id="thursday-july-29" class="section level4">
 <h4>Thursday July 29</h4>
@@ -1369,7 +1395,7 @@ introgression patterns in intraspecific hybrids between wild and
 domesticated barley</p>
 </div>
 </div>
-<div id="july-3" class="section level3">
+<div id="july-4" class="section level3">
 <h3>July</h3>
 <div id="thursday-july-16" class="section level4">
 <h4>Thursday July 16</h4>
@@ -1392,7 +1418,7 @@ et al 2020</a> Genomic Evidence for Complex Domestication History of the
 Cultivated Tomato in Latin America</p>
 </div>
 </div>
-<div id="june-2" class="section level3">
+<div id="june-3" class="section level3">
 <h3>June</h3>
 <div id="thursday-june-18" class="section level4">
 <h4>Thursday June 18</h4>
@@ -1633,7 +1659,7 @@ genomic landscape of recombination rate variation in European Aspen
 (Populus tremula)</p>
 </div>
 </div>
-<div id="july-4" class="section level3">
+<div id="july-5" class="section level3">
 <h3>July</h3>
 <div id="thursday-july-25" class="section level4">
 <h4>Thursday July 25</h4>
@@ -1664,7 +1690,7 @@ disentangling local adaptation from altitudinal gradient selection in
 snapdragon plants</p>
 </div>
 </div>
-<div id="june-3" class="section level3">
+<div id="june-4" class="section level3">
 <h3>June</h3>
 <div id="thursday-june-27" class="section level4">
 <h4>Thursday June 27</h4>
