--- a/publications.html
+++ b/publications.html
@@ -400,7 +400,12 @@ $(document).ready(function () {
 <p>   </p>
 <div id="preprint" class="section level2">
 <h2>Preprint</h2>
-<p>Coming soon</p>
+<ul>
+<li><a href="https://doi.org/10.1101/2024.06.07.597898">Local selection
+shaped the diversity of European maize landraces.</a><br />
+<strong>Takou, M, Schulz K and Stetter MG</strong> (2024). bioRxiv,
+2024-06.</li>
+</ul>
 </div>
 <div id="section" class="section level2">
 <h2>2024</h2>
