--- a/reading.html
+++ b/reading.html
@@ -409,6 +409,26 @@ paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="july" class="section level3">
 <h3>July</h3>
+<div id="tuesday-july-23" class="section level4">
+<h4>Tuesday July 23</h4>
+<p><a
+href="https://onlinelibrary.wiley.com/doi/full/10.1111/pbi.14022">Arca
+et al, 2023</a> Genotyping of DNA pools identifies untapped landraces
+and genomic regions to develop next-generation varieties</p>
+</div>
+<div id="tuesday-july-16" class="section level4">
+<h4>Tuesday July 16</h4>
+<p><a
+href="https://genomebiology.biomedcentral.com/articles/10.1186/s13059-024-03310-x">Cao
+et al, 2024</a> DNA methylation variations underlie lettuce
+domestication and divergence</p>
+</div>
+<div id="tuesday-july-9" class="section level4">
+<h4>Tuesday July 9</h4>
+<p><a href="https://www.nature.com/articles/s41559-024-02443-3">Andrade
+et al, 2024</a> Selection against domestication alleles in introduced
+rabbit populations</p>
+</div>
 <div id="tuesday-july-2" class="section level4">
 <h4>Tuesday July 2</h4>
 <p><a
