--- a/reading.html
+++ b/reading.html
@@ -407,8 +407,18 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="august" class="section level3">
+<h3>August</h3>
+<p>Summer break</p>
+</div>
 <div id="july" class="section level3">
 <h3>July</h3>
+<div id="tuesday-july-30" class="section level4">
+<h4>Tuesday July 30</h4>
+<p><a href="https://www.science.org/doi/10.1126/science.adl0038">Landis
+et al, 2024</a> Natural selection drives emergent genetic homogeneity in
+a century-scale experiment with barley</p>
+</div>
 <div id="tuesday-july-23" class="section level4">
 <h4>Tuesday July 23</h4>
 <p><a
@@ -666,7 +676,7 @@ al., 2023</a> Structure and function of rice hybrid genomes reveal
 genetic basis and optimal performance of heterosis</p>
 </div>
 </div>
-<div id="august" class="section level3">
+<div id="august-1" class="section level3">
 <h3>August</h3>
 <div id="thursday-august-24" class="section level4">
 <h4>Thursday August 24</h4>
@@ -902,7 +912,7 @@ et al 2022</a> Uncovering the genomic basis of an extraordinary plant
 invasion</p>
 </div>
 </div>
-<div id="august-1" class="section level3">
+<div id="august-2" class="section level3">
 <h3>August</h3>
 <div id="thursday-august-25" class="section level4">
 <h4>Thursday August 25</h4>
@@ -1126,7 +1136,7 @@ et al, 2021</a> An ancestral recombination graph of human, Neanderthal,
 and Denisovan genomes</p>
 </div>
 </div>
-<div id="august-2" class="section level3">
+<div id="august-3" class="section level3">
 <h3>August</h3>
 <div id="thursday-august-26" class="section level4">
 <h4>Thursday August 26</h4>
@@ -1641,7 +1651,7 @@ et al 2019</a> Impact of demography on linked selection in two
 outcrossing Brassicaceae species</p>
 </div>
 </div>
-<div id="august-3" class="section level3">
+<div id="august-4" class="section level3">
 <h3>August</h3>
 <div id="thursday-august-29" class="section level4">
 <h4>Thursday August 29</h4>
